--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="assets/css/material-design-iconic-font.min.css"/>
+  <link rel="stylesheet" href="assets/css/app.css" type="text/css"/>
 </head>
 <body>
   <app-root></app-root>
