--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="assets/css/material-design-iconic-font.min.css"/>
   <link rel="stylesheet" href="assets/css/app.css" type="text/css"/>
+  <link rel="stylesheet" href="assets/css/theme.css" type="text/css"/>
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
 </head>
 <body>
   <app-root></app-root>
